test/success/nostd/basics/implicits/basic/main.sk
module Main {

implicit stuff : ()

fn foo() {
    stuff;
}

fn main() {
    let someStuff = ();
    with stuff = someStuff {
        foo();
    }
}

}