test/errors/implicit/missing_handler/main.sk
module Main {

struct Bar {
}

implicit mut myBar: Bar

fn use(b: &Bar) {
}

fn foo() {
    use(myBar);
}

fn main() {
    foo();
}

}
